--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ license = "GPL"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yaserde = {version = "0.8"}
-yaserde_derive = {version = "0.8"}
+#yaserde = {version = "0.8"}
+yaserde = {path = "../yaserde/yaserde"}
+#yaserde_derive = {version = "0.8"}
+yaserde_derive = {path = "../yaserde/yaserde_derive"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
 zip = {version="0.6", features = ["deflate", "time"], default-features = false}
