--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "GPL"
 #yaserde = {version = "0.8"}
 yaserde = {git = "https://github.com/holg/yaserde/", branch="gldf"}
 #yaserde_derive = {version = "0.8"}
-yaserde_derive = {git = "https://github.com/holg/yaserde/yaserde_derive/", branch="gldf"}
+yaserde_derive = {git = "https://github.com/holg/yaserde/", branch="gldf"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
 zip = {version="0.6", features = ["deflate", "time"], default-features = false}
