--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ license = "GPL"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yaserde = {version = "0.8"}
-#yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
+#yaserde = {version = "0.8"}
+yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
 yaserde_derive = {version = "0.8"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
