[ADD] added documentation , repository and homepage to the manifest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ name = "gldf-rs"
 version = "0.1.0"
 edition = "2021"
 authors = ["Holger Trahe<trahe@mac.com>"]
+documentation = "https://github.com/holg/gldf-rs"
 description = "GLDF (General Lighting Data Format) parser and writer for Rust"
+repository = "https://github.com/holg/gldf-rs"
+homepage = "https://github.com/holg/gldf-rs"
 license = "GPL"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
