--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "https://github.com/holg/gldf-rs"
 description = "GLDF (General Lighting Data Format) parser and writer for Rust"
 repository = "https://github.com/holg/gldf-rs"
 homepage = "https://github.com/holg/gldf-rs"
-license = "GPL"
+license = "GPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
