--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 readme = "README.md"
 name = "gldf-rs"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Holger Trahe<trahe@mac.com>"]
 documentation = "https://github.com/holg/gldf-rs"
@@ -13,12 +13,26 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#yaserde = {version = "0.8"}
+#yaserde = {version = "0.8.0"}
+# we do not need our own branch anymore, as now we use the one from yaserde
 yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
 yaserde_derive = {version = "0.8"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
+anyhow = {version = "1.0"}
 zip = {version="0.6", features = ["deflate", "time"], default-features = false}
+regex = { version = "1.9" }
+reqwest = { version = "0.11.20" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies.regex]
+version = "1.9"
+
+
+[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest]
+version = "0.11.18"
+default-features = false
+features = ["json"]
+
 #zip = {path = "../zip", features = ["deflate", "time"], default-features = false}
 
 [lib]
