--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,11 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#yaserde = {version = "0.8.0"}
-# we do not need our own branch anymore, as now we use the one from yaserde
+#yaserde = {version = "0.8"}
+# we do need our own branch anymore, as now we use the one from yaserde
+#yaserde = {path = "../yaserde/yaserde"} #, branch="gldf"}
 yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
+#yaserde_derive = {path = "../yaserde/yaserde_derive"} #, branch="gldf"}
 yaserde_derive = {version = "0.8"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
@@ -23,7 +25,6 @@ anyhow = {version = "1.0"}
 zip = {version="0.6", features = ["deflate", "time"], default-features = false}
 regex = { version = "1.9" }
 reqwest = { version = "0.11.20", features = ["blocking"] }
-
 [target.'cfg(target_arch = "wasm32")'.dependencies.regex]
 version = "1.9"
 
