--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,15 +24,17 @@ serde_json = {version = "1.0"}
 anyhow = {version = "1.0"}
 zip = {version="0.6", features = ["deflate", "time"], default-features = false}
 regex = { version = "1.9" }
-reqwest = { version = "0.11.20", features = ["blocking"] }
+#reqwest = { version = "0.11.20", features = ["blocking"] }
+reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
 [target.'cfg(target_arch = "wasm32")'.dependencies.regex]
+
 version = "1.9"
 
 
-[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest]
-version = "0.11.18"
+[target.'cfg(target_arch = "wasm32")'.dependencies.reqwest-wasm]
+version = "0.11.16"
 default-features = false
-features = ["json"]
+features = ["json", "blocking"]
 
 #zip = {path = "../zip", features = ["deflate", "time"], default-features = false}
 
