--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ license = "GPL-3.0-or-later"
 [dependencies]
 #yaserde = {version = "0.8"}
 # we do need our own branch anymore, as now we use the one from yaserde
-yaserde = {path = "../yaserde/yaserde"} #, branch="gldf"}
-#yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
-yaserde_derive = {path = "../yaserde/yaserde_derive"} #, branch="gldf"}
-#yaserde_derive = {version = "0.8"}
+#yaserde = {path = "../yaserde/yaserde"} #, branch="gldf"}
+yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
+#yaserde_derive = {path = "../yaserde/yaserde_derive"} #, branch="gldf"}
+yaserde_derive = {version = "0.8"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
 anyhow = {version = "1.0"}
