--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,34 +27,39 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y pkg-config libssl-dev gcc-aarch64-linux-gnu
-    
+        sudo apt-get install -y pkg-config gcc-aarch64-linux-gnu
+        
     # Set up Rust toolchain
     - name: Set up Rust toolchain
       run: |
-        if [ "${{ matrix.os }}" == "macos-latest" ]; then
-          if [ "${{ matrix.target }}" == "x86_64" ]; then
-            rustup set default-host x86_64-apple-darwin
-          else
-            rustup set default-host aarch64-apple-darwin
-          fi
-        elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-          rustup set default-host x86_64-pc-windows-msvc
-        fi
         rustup toolchain install stable
         rustup target add ${{ matrix.target }}-unknown-${{ matrix.os == 'windows-latest' && 'pc-windows-msvc' || matrix.os == 'macos-latest' && 'apple-darwin' || 'linux-gnu' }}
     
+    # Build the project with vendored OpenSSL on aarch64
     - name: Build
-      run: cargo build --verbose --target ${{ matrix.target }}-unknown-${{ matrix.os == 'windows-latest' && 'pc-windows-msvc' || matrix.os == 'macos-latest' && 'apple-darwin' || 'linux-gnu' }}
-
+      run: |
+        if [ "${{ matrix.target }}" == "aarch64" ] && [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
+          cargo build --verbose --target ${{ matrix.target }}-unknown-${{ matrix.os == 'linux-latest' && 'linux-gnu' }} --features "vendored"
+        else
+          cargo build --verbose --target ${{ matrix.target }}-unknown-${{ matrix.os == 'windows-latest' && 'pc-windows-msvc' || matrix.os == 'macos-latest' && 'apple-darwin' || 'linux-gnu' }}
+        fi
+    
+    # Run tests
     - name: Run tests
-      run: cargo test --verbose --target ${{ matrix.target }}-unknown-${{ matrix.os == 'windows-latest' && 'pc-windows-msvc' || matrix.os == 'macos-latest' && 'apple-darwin' || 'linux-gnu' }}
-
+      run: |
+        if [ "${{ matrix.target }}" == "aarch64" ] && [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
+          cargo test --verbose --target ${{ matrix.target }}-unknown-${{ matrix.os == 'linux-latest' && 'linux-gnu' }} --features "vendored"
+        else
+          cargo test --verbose --target ${{ matrix.target }}-unknown-${{ matrix.os == 'windows-latest' && 'pc-windows-msvc' || matrix.os == 'macos-latest' && 'apple-darwin' || 'linux-gnu' }}
+        fi
+    
+    # Package the artifacts
     - name: Package artifact
       run: |
         mkdir -p artifacts
         cp target/${{ matrix.target }}-unknown-${{ matrix.os == 'windows-latest' && 'pc-windows-msvc' || matrix.os == 'macos-latest' && 'apple-darwin' || 'linux-gnu' }}/debug/libgldf_rs.* artifacts/
-
+    
+    # Upload the artifacts
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
