--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,6 +29,17 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y pkg-config libssl-dev gcc-aarch64-linux-gnu
 
+    # Set OpenSSL environment variables for Linux aarch64
+    - name: Set OpenSSL environment variables (Linux aarch64)
+      if: runner.os == 'Linux' && matrix.target == 'aarch64'
+      run: |
+        export OPENSSL_DIR=/usr/lib/aarch64-linux-gnu
+        export OPENSSL_LIB_DIR=/usr/lib/aarch64-linux-gnu
+        export OPENSSL_INCLUDE_DIR=/usr/include
+        echo "OPENSSL_DIR=$OPENSSL_DIR" >> $GITHUB_ENV
+        echo "OPENSSL_LIB_DIR=$OPENSSL_LIB_DIR" >> $GITHUB_ENV
+        echo "OPENSSL_INCLUDE_DIR=$OPENSSL_INCLUDE_DIR" >> $GITHUB_ENV
+
     # Install dependencies for macOS
     - name: Install dependencies (macOS)
       if: runner.os == 'macOS'
