--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 readme = "README.md"
 name = "gldf-rs"
-version = "0.2.2"
+version = "0.3.0"
 edition = "2021"
 authors = ["Holger Trahe<trahe@mac.com>"]
 documentation = "https://docs.rs/gldf-rs/"
@@ -15,21 +15,22 @@ license = "GPL-3.0-or-later"
 [dependencies]
 #yaserde = {version = "0.8"}
 # we do need our own branch anymore, as now we use the one from yaserde
-yaserde = {path = "../yaserde/yaserde"} #, branch="gldf"}
-#yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
-yaserde_derive = {path = "../yaserde/yaserde_derive"} #, branch="gldf"}
-#yaserde_derive = {version = "0.8"}
+#yaserde = {path = "../yaserde/yaserde"} #, branch="gldf"}
+yaserde = {version="0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
+#yaserde_derive = {path = "../yaserde/yaserde_derive"} #, branch="gldf"}
+yaserde_derive = {version = "0.8", git = "https://github.com/holg/yaserde/", branch="gldf"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {version = "1.0"}
 anyhow = {version = "1.0"}
-zip = {version="0.6", features = ["deflate", "time"], default-features = false}
+zip = {version="2.2", features = ["deflate", "time"], default-features = false}
 regex = { version = "1.9" }
-#reqwest = { version = "0.11.20", features = ["blocking"] }
-reqwest-wasm = { version = "0.11.16", features = ["blocking"] }
+reqwest = { version = "0.12.8", features = ["json", "blocking"] }
+futures = "0.3"
 [target.'cfg(target_arch = "wasm32")'.dependencies.regex]
-
 version = "1.9"
 
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies.reqwest-wasm]
 version = "0.11.16"
