--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         name: Checkout code
+
+      - name: Install OpenSSL (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew update
+          brew install openssl
+
+      - name: Set OpenSSL environment variables (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          echo "OPENSSL_DIR=$(brew --prefix openssl)" >> $GITHUB_ENV
+
+      - name: Install OpenSSL (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libssl-dev
+
       - uses: actions-rs/toolchain@v1
         name: Install Rust toolchain
         with:
