--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,9 @@ name: Rust
 
 on:
   push:
-    branches: [ "master", "staging" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "master", "staging" ]
+    branches: [ "master" ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -15,50 +15,80 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         architecture: [x86_64, aarch64]
+        include:
+          - os: ubuntu-latest
+            architecture: x86_64
+            docker_image: rust:latest
+          - os: ubuntu-latest
+            architecture: aarch64
+            docker_image: rustembedded/cross:aarch64-unknown-linux-gnu
+          - os: windows-latest
+            architecture: x86_64
+          - os: windows-latest
+            architecture: aarch64
+          - os: macos-latest
+            architecture: x86_64
+          - os: macos-latest
+            architecture: aarch64
+
     runs-on: ${{ matrix.os }}
+
     steps:
-      - uses: actions/checkout@v4
-        name: Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Install OpenSSL (macOS)
-        if: matrix.os == 'macos-latest'
+      - name: Set up QEMU
+        if: matrix.os == 'ubuntu-latest' && matrix.architecture == 'aarch64'
         run: |
-          brew update
-          brew install openssl
+          docker run --rm --privileged tonistiigi/binfmt:latest --install aarch64
 
-      - name: Set OpenSSL environment variables (macOS)
-        if: matrix.os == 'macos-latest'
-        run: |
-          echo "OPENSSL_DIR=$(brew --prefix openssl)" >> $GITHUB_ENV
+      - name: Install Rust toolchain for aarch64
+        if: matrix.architecture == 'aarch64' && matrix.os == 'ubuntu-latest'
+        run: rustup target add aarch64-unknown-linux-gnu
 
-      - name: Install OpenSSL (Ubuntu)
+      - name: Install Rust toolchain for Windows aarch64
+        if: matrix.architecture == 'aarch64' && matrix.os == 'windows-latest'
+        run: rustup target add aarch64-pc-windows-msvc
+
+      - name: Install Rust toolchain for macOS x86_64
+        if: matrix.architecture == 'x86_64' && matrix.os == 'macos-latest'
+        run: rustup target add x86_64-apple-darwin
+
+      - name: Install OpenSSL on Ubuntu
         if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev
 
-      - uses: actions-rs/toolchain@v1
-        name: Install Rust toolchain
-        with:
-          toolchain: stable
-          target: ${{ matrix.architecture == 'aarch64' && (matrix.os == 'linux' && 'aarch64-unknown-linux-gnu' || matrix.os == 'windows' && 'aarch64-pc-windows-msvc' || 'aarch64-apple-darwin') || 'x86_64-unknown-linux-gnu' }}
-          override: true
+      - name: Install OpenSSL on macOS
+        if: matrix.os == 'macos-latest'
+        run: brew install openssl
 
-      - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --verbose --target ${{ matrix.architecture == 'aarch64' && (matrix.os == 'linux' && 'aarch64-unknown-linux-gnu' || matrix.os == 'windows' && 'aarch64-pc-windows-msvc' || 'aarch64-apple-darwin') || 'x86_64-unknown-linux-gnu' }}
+      - name: Build with Docker
+        if: matrix.os == 'ubuntu-latest'
+        run: docker run --rm -v ${{ github.workspace }}:/usr/src/myapp -w /usr/src/myapp ${{ matrix.docker_image }} cargo build --target aarch64-unknown-linux-gnu --verbose
 
-      - name: Run tests
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --verbose --target ${{ matrix.architecture == 'aarch64' && (matrix.os == 'linux' && 'aarch64-unknown-linux-gnu' || matrix.os == 'windows' && 'aarch64-pc-windows-msvc' || 'aarch64-apple-darwin') || 'x86_64-unknown-linux-gnu' }}
+      - name: Build on Windows
+        if: matrix.os == 'windows-latest'
+        run: cargo build --target ${{ matrix.architecture == 'aarch64' && 'aarch64-pc-windows-msvc' || 'x86_64-pc-windows-msvc' }} --verbose
+
+      - name: Build on macOS
+        if: matrix.os == 'macos-latest'
+        run: cargo build --target ${{ matrix.architecture == 'aarch64' && 'aarch64-apple-darwin' || 'x86_64-apple-darwin' }} --verbose
+
+      - name: Run tests with Docker
+        if: matrix.os == 'ubuntu-latest'
+        run: docker run --rm -v ${{ github.workspace }}:/usr/src/myapp -w /usr/src/myapp ${{ matrix.docker_image }} cargo test --target aarch64-unknown-linux-gnu --verbose
+
+      - name: Run tests on Windows
+        if: matrix.os == 'windows-latest'
+        run: cargo test --target ${{ matrix.architecture == 'aarch64' && 'aarch64-pc-windows-msvc' || 'x86_64-pc-windows-msvc' }} --verbose
+
+      - name: Run tests on macOS
+        if: matrix.os == 'macos-latest'
+        run: cargo test --target ${{ matrix.architecture == 'aarch64' && 'aarch64-apple-darwin' || 'x86_64-apple-darwin' }} --verbose
 
       - name: Upload build artifacts
         if: ${{ success() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.os }}-${{ matrix.architecture }}-build
           path: |
