--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
           toolchain: stable
 
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --verbose --release
 
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --verbose --release
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
