--- a/gldf-rs-python/Cargo.toml
+++ b/gldf-rs-python/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 # Core library
-gldf-rs.workspace = true
+gldf-rs = { version = "0.3.1", path = "../gldf-rs-lib" }
 
 # Python bindings
 pyo3.workspace = true
