--- a/gldf-rs-wasm/Cargo.toml
+++ b/gldf-rs-wasm/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/main.rs"
 
 [dependencies]
 # Core library - disable http feature for WASM compatibility
-gldf-rs = { path = "../gldf-rs-lib", default-features = false }
+gldf-rs = { version = "0.3.1", path = "../gldf-rs-lib", default-features = false }
 
 # Error handling
 anyhow.workspace = true
