--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,6 +9,7 @@ on:
       - master
     tags:
       - 'v*'
+      - '[0-9]+.[0-9]+.[0-9]+'
     paths:
       - 'gldf-rs-python/**'
       - 'gldf-rs-lib/**'
@@ -158,7 +159,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
+    if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
     needs: [linux, musllinux, windows, macos, sdist]
     permissions:
       id-token: write
