--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ tokio = { version = "1.38", features = ["rt", "test-util", "macros"] }
 async-std = "1.12"
 
 # HTTP client
-reqwest = { version = "0.12", features = ["rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 reqwest-wasm = { version = "0.11", features = ["blocking"] }
 
 # Compression
