--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -182,3 +182,9 @@ jobs:
         with:
           packages-dir: dist/
           skip-existing: true
+      - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/*
+          generate_release_notes: true
