--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -167,6 +167,9 @@ jobs:
       attestations: write
     steps:
       - uses: actions/download-artifact@v4
+        with:
+          pattern: wheels-*
+          merge-multiple: false
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
