--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,9 +33,6 @@ jobs:
             target: x86_64
           - runner: ubuntu-latest
             target: aarch64
-    defaults:
-      run:
-        working-directory: gldf-rs-python
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -52,7 +49,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-linux-${{ matrix.platform.target }}
-          path: gldf-rs-python/dist
+          path: dist
 
   musllinux:
     runs-on: ${{ matrix.platform.runner }}
@@ -63,9 +60,6 @@ jobs:
             target: x86_64
           - runner: ubuntu-latest
             target: aarch64
-    defaults:
-      run:
-        working-directory: gldf-rs-python
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -82,7 +76,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-musllinux-${{ matrix.platform.target }}
-          path: gldf-rs-python/dist
+          path: dist
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
@@ -91,9 +85,6 @@ jobs:
         platform:
           - runner: windows-latest
             target: x64
-    defaults:
-      run:
-        working-directory: gldf-rs-python
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -110,7 +101,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-windows-${{ matrix.platform.target }}
-          path: gldf-rs-python/dist
+          path: dist
 
   macos:
     runs-on: ${{ matrix.platform.runner }}
@@ -121,9 +112,6 @@ jobs:
             target: x86_64
           - runner: macos-14
             target: aarch64
-    defaults:
-      run:
-        working-directory: gldf-rs-python
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -139,7 +127,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-macos-${{ matrix.platform.target }}
-          path: gldf-rs-python/dist
+          path: dist
 
   sdist:
     runs-on: ubuntu-latest
@@ -154,7 +142,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: wheels-sdist
-          path: gldf-rs-python/dist
+          path: dist
 
   release:
     name: Release
@@ -170,6 +158,14 @@ jobs:
         with:
           pattern: wheels-*
           merge-multiple: false
+      - name: Show downloaded artifacts
+        run: |
+          echo "=== Workspace root ==="
+          ls -la
+          echo "=== wheels-* dirs ==="
+          ls -la wheels-* || true
+          echo "=== All wheels and sdists ==="
+          find . -maxdepth 3 -type f \( -name '*.whl' -o -name '*.tar.gz' \) -print || true
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
